add_subdirectory(thirdparty/libsigc++-2.0)
add_subdirectory(thirdparty/lg)
add_subdirectory(thirdparty/EPDriver)
add_subdirectory(thirdparty/serialib)
add_subdirectory(thirdparty/sqlite)
add_subdirectory(thirdparty/eventpp)
add_subdirectory(thirdparty/glog)

add_subdirectory(macro)
add_subdirectory(libtimer)
add_subdirectory(sqlite3cpp)
add_subdirectory(epdcpp)
add_subdirectory(4gdtu)